Bug 1602430 - Apply min/max-height correctly for fragmented boxes with no height specified.  r=TYLin

Depends on D56738

Differential Revision: https://phabricator.services.mozilla.com/D57561